--- a/frontend-ui/index.html
+++ b/frontend-ui/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- ◆◆  FAVICONS  ◆◆ -->
+    <!-- 32 × 32 tab icon (already placed in /public) -->
+    <link rel="icon" type="image/png" href="/lumino192x192.png" />
+    <!-- (optional) larger icon for phone home-screen / PWA -->
+    <link rel="apple-touch-icon" href="/lumino192x192.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>PP Nursery Management</title>
   </head>
-  <body>
+
+  <body class="bg-gray-50">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
